# pylodgify

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
lodgify/: __init__.py  booking.py  lodgify.py
tests/: test_lodgify.py
